--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @use 'spruce/scss/spruce' with (
   $colors: (
     'base': (
-      'primary-darker': hsl(272, 100%, 9%)
+      'primary-darkest': hsl(272, 100%, 9%)
     )
   ),
   $font-size-base: 1.0375rem,
