--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @use 'layout/documentation';
 
 @use 'components/header';
+@use 'components/hero';
 @use 'components/footer';
 @use 'components/sidebar';
 @use 'components/table-of-content';
