--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -30,7 +30,7 @@
   }
 
   &__title {
-    font-family: 'PT Serif', sans-serif;
+    // font-family: 'PT Serif', sans-serif;
     margin: 0 0 1rem;
     font-size: spruce.get-font-size('h4');
   }
