--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 @use '../spruce/scss/spruce';
 
 .header-wrapper {
-  // background-color: spruce.get-color('primary-darkest');
+  background-color: spruce.get-color('primary-darkest');
 }
 
 .header {
@@ -11,7 +11,7 @@
 
   &__inner {
     align-items: center;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
     display: flex;
     gap: 2rem;
     justify-content: space-between;
@@ -35,7 +35,7 @@
   }
 
   &__slogen {
-    border-left: 1px solid rgba(0, 0, 0, 0.05);
+    border-left: 1px solid rgba(255, 255, 255, 0.05);
     color: darken(spruce.get-color('secondary', 'base', true), 10%);
     font-weight: 600;
     line-height: 1;
@@ -67,7 +67,7 @@
 
     a {
       color: #fff;
-      color: spruce.get-color('heading');
+      // color: spruce.get-color('heading');
       text-decoration: none;
 
       &:hover,
