Front page style

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -85,7 +85,7 @@
       justify-content: space-between;
     }
 
-    .footer-section__navigation {
+    .footer__navigation {
       display: flex;
       flex-wrap: wrap;
 
