--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,8 @@
 @use '../spruce/scss/spruce';
 
 .header-wrapper {
-  background-color: spruce.get-color('primary-darkest');
+  // background-color: spruce.get-color('primary-darkest');
+  // background: linear-gradient(0, rgb(157 0 255 / 4%), transparent);
 }
 
 .header {
@@ -11,7 +12,7 @@
 
   &__inner {
     align-items: center;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     display: flex;
     gap: 2rem;
     justify-content: space-between;
@@ -35,13 +36,12 @@
   }
 
   &__slogen {
-    border-left: 1px solid rgba(255, 255, 255, 0.05);
-    color: darken(spruce.get-color('secondary', 'base', true), 10%);
-    font-weight: 600;
+    border-left: 1px solid rgba(0, 0, 0, 0.05);
+    // font-weight: 600;
     line-height: 1;
     margin-left: 1.5rem;
     padding-left: 1.5rem;
-    text-transform: uppercase;
+    // text-transform: uppercase;
   }
 
   &__navigation {
@@ -67,7 +67,7 @@
 
     a {
       color: #fff;
-      // color: spruce.get-color('heading');
+      color: spruce.get-color('heading');
       text-decoration: none;
 
       &:hover,
