--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -8,25 +8,29 @@
 
   &__inner {
     align-items: center;
-    display: flex;
-    gap: 4rem;
-    padding: clamp(5rem, 5vw, 7rem) 0;
-    // flex-direction: column;
-    // text-align: center;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: minmax(0, 1fr);
+    padding: clamp(spruce.spacer('xxl'), 6vw, spruce.spacer('xxxl')) 0;
+
+    @include spruce.breakpoint(md) {
+      gap: 4rem;
+      grid-template-columns: minmax(0, 1.5fr) minmax(0, 1fr);
+    }
   }
 
   &__caption {
-    width: 60%;
-
     @include spruce.layout-stack(spruce.spacer('s'));
   }
 
   &__image {
-    width: 40%;
-  }
+    order: -1;
+    max-width: 10rem;
 
-  &__notification {
-
+    @include spruce.breakpoint(md) {
+      order: 2;
+      max-width: none;
+    }
   }
 
   &__logo {
@@ -34,7 +38,7 @@
   }
 
   &__title {
-    font-size: 3.6rem;
+    font-size: clamp(spruce.font-size('h1'), 5vw, 3.6rem);
     max-width: 50ch;
   }
 
