--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,4 +1,5 @@
 @use '../spruce/scss/spruce';
+@use '../mixins/title';
 
 .sidebar {
   position: relative;
@@ -12,10 +13,7 @@
 
 .sidebar-section {
   &__title {
-    color: darken(spruce.color('primary', 'base', true), 10%);
-    font-size: spruce.$font-size-base;
-    margin: 0;
-    text-transform: uppercase;
+    @include title.sidebar;
   }
 
   &__navigation {
