--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -63,8 +63,7 @@
       }
 
       &:hover,
-      &:focus,
-      &[aria-current='page'] {
+      &:focus {
         color: spruce.color('primary');
       }
     }
