--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@
     )
   ),
   $font-size-base: 1.0375rem,
-  $font-family-base: #{'Poppins', sans-serif},
+  $font-family-base: #{'IBM Plex Sans', sans-serif},
   $container-width: 86rem
 );
 
