--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,7 @@
 @use 'components/sidebar';
 @use 'components/table-of-content';
 @use 'components/notification';
+@use 'components/code-block';
 @use 'components/preview';
 
 body {
