--- a/src/styles/components/_preview.scss
+++ b/src/styles/components/_preview.scss
@@ -1,9 +1,17 @@
 @use '../spruce/scss/spruce';
 
 .preview {
-  @include spruce.layout-stack(spruce.spacer('m'));
-
   border: 1px solid rgba(0, 0, 0, 0.075);
   border-radius: spruce.$border-radius-sm;
-  padding: spruce.spacer('m');
+
+  &__html {
+    @include spruce.layout-stack(spruce.spacer('m'));
+
+    padding: spruce.spacer('m');
+  }
+
+  .prism-code {
+    border-top: 1px solid rgba(0, 0, 0, 0.075);
+    margin: 0;
+  }
 }
