Add a little bit smelly TOC (will upgrade to MDX 2)

--- a/src/styles/components/_preview.scss
+++ b/src/styles/components/_preview.scss
@@ -7,7 +7,7 @@
   &__html {
     @include spruce.layout-stack(spruce.spacer('m'));
 
-    padding: spruce.spacer('m');
+    padding: spruce.spacer('l');
   }
 
   .prism-code {
