--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -9,7 +9,7 @@
 
   &__inner {
     display: grid;
-    gap: spruce.spacer('xl');
+    gap: spruce.spacer('l');
     grid-template-columns: minmax(0, 1fr) minmax(0, 3fr) minmax(0, 1fr);
   }
 
@@ -18,6 +18,31 @@
 
     > p:first-of-type {
       font-size: spruce.$font-size-lg;
+    }
+
+    h2 {
+      position: relative;
+      
+      &:hover {
+        > a {
+          opacity: 1;
+        }
+      }
+
+      > a {
+        font-size: 0.6em;
+        font-weight: 400;
+        line-height: 1;
+        position: absolute;
+        text-decoration: none;
+        top: calc(50% - 0.45em);
+        left: -1.2em;
+        opacity: 0;
+
+        &:focus {
+          opacity: 1;
+        }
+      }
     }
   }
 
