--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -59,6 +59,7 @@
       text-decoration: none;
 
       &[aria-current='page'] {
+        color: spruce.color('primary');
         font-weight: 700;
       }
 
