Start documentation content

--- a/src/styles/components/_table-of-content.scss
+++ b/src/styles/components/_table-of-content.scss
@@ -21,6 +21,7 @@
 
     a {
       color: spruce.color('text');
+      line-height: spruce.$line-height-sm;
       text-decoration: none;
     }
   }
