--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -16,6 +16,14 @@
   &__content {
     @include spruce.layout-stack(spruce.spacer('m'));
 
+    * + h2,
+    * + h3,
+    * + h4,
+    * + h5,
+    * + h6 {
+      margin-top: spruce.spacer('l');
+    }
+
     > p:first-of-type {
       font-size: spruce.$font-size-lg;
     }
