Add page alert component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@
 @use 'components/table-of-content';
 @use 'components/notification';
 @use 'components/code-block';
+@use 'components/page-alert';
 @use 'components/preview';
 
 
