Style skip-link

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,7 @@
 @use 'components/code-block';
 @use 'components/page-alert';
 @use 'components/preview';
+@use 'components/skip-link';
 
 
 body {
