--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -1,5 +1,4 @@
 @use '../spruce/scss/spruce';
-@use '../variable';
 
 .layout-documentation {
   padding: spruce.spacer('xl') 0;
@@ -56,7 +55,7 @@
   }
 
   &__title {
-    font-size: variable.$page-title-font-size;
+    font-size: 3.3rem;
     margin: 0;
   }
 }
