--- a/src/styles/components/_notification.scss
+++ b/src/styles/components/_notification.scss
@@ -1,11 +1,10 @@
 @use '../spruce/scss/spruce';
 
 .notification {
-  background-color: spruce.color('info', 'alert');
+  background-color: spruce.color(info, alert);
   border-radius: spruce.$border-radius-sm;
   color: #fff;
   display: inline-flex;
   font-size: 1rem;
-  line-height: spruce.$line-height-md;
-  padding: spruce.spacer('xs') spruce.spacer('s');
+  padding: spruce.spacer(xs) spruce.spacer(s);
 }
